--- a/style.css
+++ b/style.css
@@ -21,9 +21,13 @@
 
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
   scroll-padding-top: 5.5rem;
   scroll-behavior: smooth;
+}
+
+html,
+body {
+  overflow-x: hidden !important;
 }
 
 img {
@@ -498,6 +502,62 @@ header .icons #menu-bars {
 
 /* / review section */
 
+/* order section */
+.order form {
+  max-width: 90rem;
+  border-radius: 0.5rem;
+  box-shadow: var(--box-shadow);
+  border: 0.1rem rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  padding: 1.5rem;
+  margin: 0 auto;
+}
+
+.order form .inputBox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.order form .inputBox .input {
+  width: 49%;
+}
+
+.order form .inputBox .input span {
+  display: block;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
+  color: var(--light-color);
+}
+
+.order form .inputBox .input input,
+.order form .inputBox .input textarea {
+  background: #eee;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  font-size: 1.6rem;
+  color: var(--black);
+  text-transform: none;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+.order form .inputBox .input input:focus,
+.order form .inputBox .input textarea:focus {
+  border: 0.1rem solid var(--green);
+}
+
+.order form .inputBox .input textarea {
+  height: 20rem;
+  resize: none;
+}
+
+.order form .inputBox .btn {
+  margin-top: 0;
+}
+
+/* / order section */
+
 /* media queires */
 @media (max-width: 991px) {
   html {
@@ -547,7 +607,7 @@ header .icons #menu-bars {
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 450px) {
   html {
     font-size: 50%;
   }
@@ -558,6 +618,10 @@ header .icons #menu-bars {
 
   .dishes .box-container .box img {
     height: auto;
+    width: 100%;
+  }
+
+  .order form .inputBox .input {
     width: 100%;
   }
 }
