--- a/style.css
+++ b/style.css
@@ -598,6 +598,30 @@ header .icons #menu-bars {
 }
 
 /* / footer section */
+/* loader  */
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 100000;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.loader-container img {
+  width: 35rem;
+}
+
+.loader-container.fade-out {
+  top: 110%;
+  opacity: 0;
+}
+/* / loader */
 
 /* media queires */
 @media (max-width: 991px) {
